<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/percent_sign6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_sign"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toEndOf="@+id/sunlight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percent_sign7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_sign"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sunlight"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/moisture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percent_sign5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_sign"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toEndOf="@+id/sunlight_threshold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <TextView
        android:id="@+id/percent_sign4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_sign"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toEndOf="@+id/moisture_threshold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/plant_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#8EFF8F"
        android:text="@string/plant_species"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/update"
        android:layout_width="111dp"
        android:layout_height="53dp"
        android:background="#8EFF8F"
        android:textColor="#FFFFFF"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/moisture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moisture"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sunlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunlight"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moisture_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moisture_label"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <TextView
        android:id="@+id/sunlight_label"
        android:layout_width="96dp"
        android:layout_height="30dp"
        android:text="@string/sunlight_label"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <TextView
        android:id="@+id/moisture_threshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moisture_threshold_label"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_species"
        app:layout_constraintVertical_bias="0.606" />

    <TextView
        android:id="@+id/plant_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_name_label"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/moisture_threshold_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_species"
        app:layout_constraintVertical_bias="0.877" />

    <TextView
        android:id="@+id/sunlight_threshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunlight_threshold_label"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moisture_threshold_label"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/moisture_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moisture_threshold"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toEndOf="@+id/moisture_threshold_label"
        app:layout_constraintTop_toBottomOf="@+id/plant_species"
        app:layout_constraintVertical_bias="0.606" />

    <TextView
        android:id="@+id/plantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/moisture"
        android:textColor="#000000"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/plant_name_label"
        app:layout_constraintTop_toBottomOf="@+id/plant_species"
        app:layout_constraintVertical_bias="0.445" />

    <TextView
        android:id="@+id/sunlight_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sunlight_threshold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toEndOf="@+id/sunlight_threshold_label"
        app:layout_constraintTop_toBottomOf="@+id/moisture_threshold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="265dp"
        android:layout_height="264dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/plant_pal_logo"
        app:layout_constraintBottom_toTopOf="@+id/plant_species"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

</androidx.constraintlayout.widget.ConstraintLayout>